# stock_rhetoric

./: .dockerignore  .env.example  .gitignore  README.md  fly.toml  pyproject.toml
.claude/: CLAUDE.md
deploy/: Dockerfile  README.md  stock-rhetoric-bot.service
docs/: mobile.md
src/stock_rhetoric/: __init__.py  aggregator.py  bot.py  cli.py  financials.py  finra.py  guide.py  llm.py  market.py  movers.py  peers.py  render.py  report.py  risk.py  scoring.py  sentiment.py  telegram_format.py  trends.py  watchlist.py
src/stock_rhetoric/sources/: base.py  google_news.py  reddit.py  sec_edgar.py  yfinance_news.py
tests/: conftest.py  test_aggregator.py  test_bot_pending.py  test_cli.py  test_financials_earnings.py  test_finra.py  test_guide.py  test_llm.py  test_market.py  test_peers.py  test_risk.py  test_scoring.py  test_sentiment.py  test_telegram_format.py  test_trends.py  test_watchlist.py
