[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-rhetoric"
version = "0.1.0"
description = "Terminal quantitative equity research CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "rdpatel2" }]
license = { text = "MIT" }
dependencies = [
    "yfinance>=0.2.50",
    "pandas-market-calendars>=4.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "feedparser>=6.0",
    "aiohttp>=3.9",
    "ollama>=0.3",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "vaderSentiment>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[project.scripts]
stock-rhetoric = "stock_rhetoric.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
